--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   },
   "dependencies": {
     "got": "^11.1.4",
-    "polling-to-event": "^2.0.2",
-    "xmldom": "^0.6.0",
-    "xpath": "^0.0.32"
+    "polling-to-event": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
